--- a/hugo.toml
+++ b/hugo.toml
@@ -1,19 +1,15 @@
-baseURL = 'https://jsdoublel.github.io./'
+baseURL = 'https://jsdoublel.github.io/'
 languageCode = 'en-us'
 title = 'James Willson'
 theme = 'poison'
 # paginate = 10
 pluralizelisttitles = false   # removes the automatically appended "s" on sidebar entries
 
-# NOTE: If using Disqus as commenting engine, uncomment and configure this line
-# disqusShortname = "yourDisqusShortname"
-
 [params]
-    brand = "James Willson"                      # name of your site - appears in the sidebar
-    # remote_brand_image = 'https://github.com/USERNAME.png' # path to a remote file
-    brand_image = "/images/James.jpg"    # path to the image shown in the sidebar
-    description = "Computer Science PhD at the University of Illinois Urbana-Chamapign" # Used as default meta description if not specified in front matter
-    dark_mode = true                      # optional - defaults to false
+    brand = "James Willson"                      
+    brand_image = "/images/James.jpg"    
+    description = "Computer Science PhD Student at the University of Illinois Urbana-Chamapign" 
+    dark_mode = true                      
     # favicon = "favicon.png"             # path to favicon (defaults to favicon.png)
 	hideToc = true
 
@@ -28,7 +24,6 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
     menu = [
         {Name = "About", URL = "/about/", HasChildren = false},
         {Name = "CV", URL = "/cv/", HasChildren = false},
-        # {Name = "Posts", URL = "/posts/", Pre = "Recent", HasChildren = true, Limit = 5},
         {Name = "Publications", URL = "/publications/", HasChildren = false},
         {Name = "Software", URL = "/software/", HasChildren = false},
     ]
@@ -36,22 +31,8 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
     # Links to your socials.  Comment or delete any you don't need/use. 
     # discord_url = "https://discord.com"
     email_url = "mailto:jamessw3@illinois.edu"
-    # facebook_url = "https://facebook.com"
-    # flickr_url = "https://flickr.com"
     github_url = "https://github.com/jsdoublel"
-    # gitlab_url = "https://gitlab.com"
-    # instagram_url = "https://instagram.com"
     linkedin_url = "https://www.linkedin.com/in/jamessw3/"
-    # mastodon_url = "https://mastodon.social"
-    # matrix_url = "https://matrix.org"
-    # telegram_url = "https://telegram.org"
-    # tryhackme_url = "https://tryhackme.com"
-    # twitter_url = "https://twitter.com"
-    # x_url = "https://x.com"
-    # xmpp_url = "https://xmpp.org"
-    # youtube_url = "https://youtube.com"
-    # signal_url = "https://signal.org"
-    # bluesky_url = "https://bsky.app"
 
     # NOTE: If you don't want to use RSS, comment or delete the following lines
     # Adds an RSS icon to the end of the socials which links to {{ .Site.BaseURL }}/index.xml
@@ -68,20 +49,6 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
     sidebar_img_border_color = "#515151"    # default is #515151
     sidebar_p_color = "#909090"             # default is #909090
     sidebar_socials_color = "#FFF"          # default is #FFF
-
-    # Hex colors for your content in light mode.
-    code_color = "#000"                     # default is #000
-    code_background_color = "#E5E5E5"       # default is #E5E5E5
-    code_block_color = "#FFF"               # default is #FFF
-    code_block_background_color = "#272822" # default is #272822
-    content_bg_color = "#FAF9F6"            # default is #FAF9F6
-    date_color = "#515151"                  # default is #515151
-    link_color = "#268BD2"                  # default is #268BD2
-    list_color = "#5A5A5A"                  # default is #5A5A5A
-    post_title_color = "#303030"            # default is #303030
-    table_border_color = "#E5E5E5"          # default is #E5E5E5
-    table_stripe_color = "#F9F9F9"          # default is #F9F9F9
-    text_color = "#222"                     # default is #222
 
     # Hex colors for your content in dark mode
     code_color_dark = "#FFF"                        # default is #FFF
