--- a/hugo.toml
+++ b/hugo.toml
@@ -8,7 +8,7 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
 [params]
     brand = "James Willson"                      
     brand_image = "/images/James.jpg"    
-    description = "Computer Science PhD Student at the University of Illinois Urbana-Chamapign" 
+    description = "Computer Science PhD Student at the University of Illinois Urbana-Champaign" 
     dark_mode = true                      
     # favicon = "favicon.png"             # path to favicon (defaults to favicon.png)
 	hideToc = true
