--- a/hugo.toml
+++ b/hugo.toml
@@ -79,3 +79,7 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
 [taxonomies]
     series = 'series'
     tags = 'tags'
+
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
