--- a/hugo.toml
+++ b/hugo.toml
@@ -12,6 +12,7 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
     dark_mode = true                      
     # favicon = "favicon.png"             # path to favicon (defaults to favicon.png)
 	hideToc = true
+	uglyURLs = true
 
     # front_page_content = ["About"] # Equivalent to the default value, add page bundle names to include them on the front page.
 
