--- a/hugo.toml
+++ b/hugo.toml
@@ -10,7 +10,7 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
     brand_image = "/images/James.jpg"    
     description = "PhD Student—Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign" 
     dark_mode = true                      
-    # favicon = "favicon.png"             # path to favicon (defaults to favicon.png)
+    favicon = "/images/eraserhead.png"             # path to favicon (defaults to favicon.png)
 	# hideToc = true
 
     # front_page_content = ["About"] # Equivalent to the default value, add page bundle names to include them on the front page.
