--- a/hugo.toml
+++ b/hugo.toml
@@ -56,15 +56,15 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
     code_color_dark = "#FFF"                        # default is #FFF
     code_background_color_dark = "#515151"          # default is #515151
     code_block_color_dark = "#FFF"                  # default is #FFF
-    code_block_background_color_dark = "#272822"    # default is #272822
+    code_block_background_color_dark = "#222" #"#272822"    # default is #272822
     content_bg_color_dark = "#101010"               # default is #121212
     date_color_dark = "#9A9A9A"                     # default is #9A9A9A
-    link_color_dark = "#A6A6A6" #"#A9D0EF"                     # default is #268BD2
+    link_color_dark = "#FFF" #"#A6A6A6" #"#A9D0EF"                     # default is #268BD2
     list_color_dark = "#9D9D9D"                     # default is #9D9D9D
     post_title_color_dark = "#DBE2E9"               # default is #DBE2E9
     table_border_color_dark = "#515151"             # default is #515151
     table_stripe_color_dark = "#202020"             # default is #202020
-    text_color_dark = "#EEE"                        # default is #EEE
+    text_color_dark = "#FFF"                        # default is #EEE
 
 [taxonomies]
     series = 'series'
